--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <img src="assets/img/Gokul gardens without background.png">
   </aside>
   <hgroup class="auto-fadein">
-    <h1>Gokul Gardens</h1>
-    <h2>Mathampalayam</h2>
-    <p>Good living at a Budget<br/></p>
+    <h1 style="background-color: rgba(255, 255, 255,0.8);">Gokul Gardens</h1>
+    <h2 style="background-color: rgba(255, 255, 255,0.8);">Mathampalayam</h2>
+    <p style="background-color: rgba(255, 255, 255,0.8);">Good living at a Budget<br/></p>
   </hgroup>
   <article></article>  
 </slide>
